Feat: Complete Transaction